Code cleanup - deprecations