@@ -42,7 +42,7 @@ public enum VCardScript implements IVDoc<CCardScript> {
         txtScript.setDocument(doc);
         error = doc.addStyle("error", null);
         error.addAttribute(StyleConstants.Background, Color.red);
-        error.addAttribute(StyleConstants.Bold, new Boolean(true));
+        error.addAttribute(StyleConstants.Bold, Boolean.valueOf(true));
     }
 
     public JTextPane getTxtScript() {
